Fixed font family inconsistencies on buttons and other unstyled elements; added .btn-complementary variant; made buttons bold by default; added letter-spacing-base scss variable for consistency and convenience

--- a/src/scss/_badge.scss
+++ b/src/scss/_badge.scss
@@ -1,6 +1,6 @@
 .badge {
   border-radius: $badge-border-radius; // allow badge border radius to be customized outside of the global border-radius rules
-  letter-spacing: .1em;
+  letter-spacing: $letter-spacing-base;
   text-transform: uppercase;
   vertical-align: baseline;
 
